update swagger document and unused code
