# pkg/load/domain/repository/load_test_repository.go
@@ -5,30 +5,6 @@ import (
 	"github.com/cloud-barista/cm-ant/pkg/load/domain/model"
 )
 
-func GetAllLoadExecutionConfig() ([]model.LoadExecutionConfig, error) {
-	db := database.DB()
-	var loadExecutionConfigs []model.LoadExecutionConfig
-	if err := db.Preload("LoadExecutionHttps").
-		Find(&loadExecutionConfigs).
-		Error; err != nil {
-		return loadExecutionConfigs, err
-	}
-
-	return loadExecutionConfigs, nil
-}
-
-func GetLoadExecutionConfig(testKey string) (model.LoadExecutionConfig, error) {
-	db := database.DB()
-	var loadExecutionConfig model.LoadExecutionConfig
-	if err := db.Preload("LoadExecutionHttps").
-		Where("load_test_key = ?", testKey).
-		First(&loadExecutionConfig).
-		Error; err != nil {
-		return loadExecutionConfig, err
-	}
-
-	return loadExecutionConfig, nil
-}
 
 func GetLoadExecutionState(loadTestKey string) (model.LoadExecutionState, error) {
 	db := database.DB()
